k8s/helm-demo-ms1-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helm-demo-ms1-deployment
  namespace: helm-test
spec:
  replicas: 3
  selector:
    matchLabels:
      component: arc-component
      app: helm-demo-ms1
  template:
    metadata:
      labels:
        app: helm-demo-ms1
        component: arc-component
    spec:
      containers:
      - name: helm-demo-ms1-container
        image: us.icr.io/ct-ticketing/demo-ms1:v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 7777
        resources:
            requests:
              memory: "64Mi"
              cpu: "128m"
            limits:
              memory: "128Mi"
              cpu: "256m"
      imagePullSecrets:
        - name: default-us-icr-io
