k8s/helm-demo-ms2-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helm-demo-ms2-deployment
  namespace: helm-test
spec:
  replicas: 2
  selector:
    matchLabels:
      app: helm-demo-ms2
      component: arc-component
  template:
    metadata:
      labels:
        app: helm-demo-ms2
        component: arc-component
    spec:
      containers:
      - name: helm-demo-ms2-container
        image: shahankitturn/demo-ms2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8888
        resources:
            requests:
              memory: "64Mi"
              cpu: "64m"
            limits:
              memory: "128Mi"
              cpu: "64m"
