k8s/helm-demo-ms3-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helm-demo-ms3-deployment
  namespace: helm-test
spec:
  replicas: 2
  selector:
    matchLabels:
      app: helm-demo-ms3
      component: arc-component
  template:
    metadata:
      labels:
        app: helm-demo-ms3
        component: arc-component
    spec:
      containers:
      - name: helm-demo-ms3-container
        image: shahankitturn/demo-ms3
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9999
        resources:
            requests:
              memory: "64Mi"
              cpu: "64m"
            limits:
              memory: "64Mi"
              cpu: "64m"
