k8s/helm-demo-ms1-service.yml
apiVersion: v1
kind: Service
metadata:
  name: helm-demo-ms1-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: helm-demo-ms1
    component: arc-component
  ports:
    - port: 80
      targetPort: 7777
