k8s/helm-demo-ms2-service.yml
apiVersion: v1
kind: Service
metadata:
  name: helm-demo-ms2-service
  namespace: helm-test
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8888
    protocol: TCP
  selector:
    app: helm-demo-ms2
    component: arc-component
  ports:
   - port: 8888
     targetPort: 8888
