k8s/helm-demo-ms3-service.yml
apiVersion: v1
kind: Service
metadata:
  name: helm-demo-ms3-service
  namespace: helm-test
spec:
  type: ClusterIP
  selector:
    app: helm-demo-ms3
    component: arc-component
  ports:
  - port: 80
    targetPort: 9999
