k8s/helm-ms2-ingress-service.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: helm-demo-ms2
  namespace: helm-test
  annotations:
    kubernetes.io/ingress.class : nginx
spec:
  rules:
    - host: helm-test-helm-demo-ms2.c4e-pipeline-templates.us-south.containers.appdomain.cloud
    - http:
        paths:
          - path: /
            backend:
                serviceName: helm-demo-ms2-service
                servicePort: 80
  tls:
    - hosts:
        - helm-test-helm-demo-ms2.c4e-pipeline-templates.us-south.containers.appdomain.cloud
      secretName: c4e-pipeline-templates.us-south.containers.appdomain.cloud
